# clion-stm32f1-basic

./: CMakeLists.txt  README.md  stm32f103xb.cmake
include/: FreeRTOSConfig.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
